feat(bulk-import): implement execute template API and handler
